--- a/octapush.docs/04.Configurations/02.Behaviour/04.Footer Links.md
+++ b/octapush.docs/04.Configurations/02.Behaviour/04.Footer Links.md
@@ -1,18 +1,17 @@
 # Footer Links Configuration
 
-Pada halaman ini saya akan menjelaskan bagaimana caranya untuk mengubah (add, edit, delete) link-link yang terdapat pada bagian footer octapush.docs.
+On this page I will explain how to change (add, edit, delete) the links contained in the footer page of **`octapush.docs`**.
 
-![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/e3fbb665/octapush.docs/00.ASSETS/images/configs-js-behave-page.png)
+![configs.js configurations](https://cdn.rawgit.com/octapush/documentations/5e256c2a/octapush.docs/00.ASSETS/images/configs-js-behave-footer-links.png)
 
-Seperti yang dapat Anda lihat pada gambar di atas, terdapat tiga link yang saya berikan pada konfigurasi tersebut, yakni Author, octapush Projects, dan download.
+As you can see in the picture above, there are three links I give to the configuration, ie Author, octapush Projects, and download.
 
-Ketiga links tersebut dapat Anda modifikasi (add, edit, delete) sesuka Anda.
+All three links you can modify (add, edit, delete) as you like by paying attention to the rules as follows:
 
-Yang perlu Anda perhatikan pada saat memodifikasi konfigurasi ini Adalah, pastikan semua link terdapat didalam karakter kurung kotak ( [ ] ).
-
-Dan untuk setiap link yang ingin Anda tampilkan, gunakan karakter kurung kurawal ( { } ) dan dipisahkan dengan tanda koma untuk setiap linknya.
+- When modifying this configuration make sure all links are contained in the square brackets `[ ]`.
+- And for each link you want to display, use the curly brackets `{ }` and separated by commas for each link.
 
 ConfigName  | Descriptions
 ----------: | ------------
-_**title**_ | Digunakan sebagai teks yang akan ditampilkan.
-_**url**_   | Digunakan sebagai alamat target dari link tersebut.
+_**title**_ | Used as **title** to be displayed.
+_**url**_   | Used as the target address of the link.
