--- a/octapush.docs/05.Documenting/01.Basic Knowledge.md
+++ b/octapush.docs/05.Documenting/01.Basic Knowledge.md
@@ -1,3 +1,11 @@
 # Basic Knowledge
 
-Ini adalah content basic knowledge
+Basically octapush.docs is a file explorer with a preview file feature (especially for markdown files, images, and markup) for your repository located on GitHub.
+
+So, any changes whatsoever happens to your files on your GitHub repository, it will be updated automatically by octapush.docs.
+
+For those of you who are used to using GitHub as a repository, you can skip this section.
+
+In this tutorial sub-section, I will only show you how to [Create Document](#/05.Documenting/02.Create%20Document.md), [Edit Document](#/05.Documenting/03.Edit%20Document.md), and [Delete Document](#/05.Documenting/04.Delete%20Document.md) via GitHub only.
+
+For detailed steps please click on the link.
