--- a/octapush.docs/05.Documenting/02.Create Document.md
+++ b/octapush.docs/05.Documenting/02.Create Document.md
@@ -1,3 +1,19 @@
 # Create Document
 
-Ini adalah content create document
+Ikuti langkah-langkah berikut untuk membuat sebuah dokumen agar dapat ditampilkan pada octapush.docs:
+- Login kedalam [GitHub](https://github.com).
+
+asdasd
+
+- Buka repository dokumentasi Anda.
+- Masuk kedalam folder dimana file Anda akan diletakkan sebagaimana yang tampak pada gambar dibawah pada kotak merah pertama. (Bila folder tersebut belum ada, maka Anda dapat menggunakan karakter slash ` / ` pada nama file disaat membuat file baru).
+
+![github repository files](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/index-html-configurations.png)
+
+- Klik tombol `Create new file` seperti yang tampak pada gambar di atas pada kotak merah kedua. Setelah tombol `Create new file` di klik, maka akan tampil halaman seperti pada gambar berikut.
+
+![github repository files](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/index-html-configurations.png)
+
+- Ketikkan nama file Anda pada kotak merah pertama. (Anda dapat menambahkan karakter slash ` / ` bila Anda ingin membuat folder baru tempat dimana file baru berada).
+- Ketik isi dokumen Anda pada kotak merah kedua.
+- Klik tombol `Commit new file` bila Anda telah selesai (seperti pada kotak merah ketiga).
