--- a/octapush.docs/05.Documenting/02.Create Document.md
+++ b/octapush.docs/05.Documenting/02.Create Document.md
@@ -1,19 +1,16 @@
 # Create Document
 
-Ikuti langkah-langkah berikut untuk membuat sebuah dokumen agar dapat ditampilkan pada octapush.docs:
-- Login kedalam [GitHub](https://github.com).
+Follow the steps below to create a document to display in **`octapush.docs`**:
+- Login into [GitHub](https://github.com).
+- Open your documentation repository.
+- Log into the folder where your file will be placed as shown in the image below on the first red box. (If the folder does not exist yet, then you can use the slash character ` / ` in the filename when creating a new file).
 
-asdasd
+![github repository files](https://cdn.rawgit.com/octapush/documentations/141f4fe0/octapush.docs/00.ASSETS/images/github-octadocs-create-file-andor-folder.png)
 
-- Buka repository dokumentasi Anda.
-- Masuk kedalam folder dimana file Anda akan diletakkan sebagaimana yang tampak pada gambar dibawah pada kotak merah pertama. (Bila folder tersebut belum ada, maka Anda dapat menggunakan karakter slash ` / ` pada nama file disaat membuat file baru).
+- Click the `Create new file` button as shown in the image above on the second red box. After the `Create new file` button is clicked, the page will appear as shown below.
 
-![github repository files](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/index-html-configurations.png)
+![github create new file](https://cdn.rawgit.com/octapush/documentations/141f4fe0/octapush.docs/00.ASSETS/images/github-octadocs-create-file-andor-folder-2.png)
 
-- Klik tombol `Create new file` seperti yang tampak pada gambar di atas pada kotak merah kedua. Setelah tombol `Create new file` di klik, maka akan tampil halaman seperti pada gambar berikut.
-
-![github repository files](https://cdn.rawgit.com/octapush/documentations/38bc0041/octapush.docs/00.ASSETS/images/index-html-configurations.png)
-
-- Ketikkan nama file Anda pada kotak merah pertama. (Anda dapat menambahkan karakter slash ` / ` bila Anda ingin membuat folder baru tempat dimana file baru berada).
-- Ketik isi dokumen Anda pada kotak merah kedua.
-- Klik tombol `Commit new file` bila Anda telah selesai (seperti pada kotak merah ketiga).
+- Type your filename in the first red box. (You can add a slash character ` / ` if you want to create a new folder where the new file is located).
+- Type in the contents of your document in the second red box.
+- Click the `Commit new file` button when you're done (as in the third red box).
