--- a/octapush.docs/05.Documenting/02.Create Document.md
+++ b/octapush.docs/05.Documenting/02.Create Document.md
@@ -3,7 +3,7 @@
 Follow the steps below to create a document to display in **`octapush.docs`**:
 - Login into [GitHub](https://github.com).
 - Open your documentation repository.
-- Log into the folder where your file will be placed as shown in the image below on the first red box. (If the folder does not exist yet, then you can use the slash character ` / ` in the filename when creating a new file).
+- Open the folder (by clicking on the folder name) where your file will be placed as shown in the image below on the first red box. (If the folder does not exist yet, then you can use the slash character ` / ` in the filename when creating a new file).
 
 ![github repository files](https://cdn.rawgit.com/octapush/documentations/141f4fe0/octapush.docs/00.ASSETS/images/github-octadocs-create-file-andor-folder.png)
 
