--- a/octapush.docs/05.Documenting/03.Edit Document.md
+++ b/octapush.docs/05.Documenting/03.Edit Document.md
@@ -1,3 +1,17 @@
 # Update Document
 
-Ini adalah content update document
+Untuk mengedit file dokumentasi, Anda dapat mengikuti beberapa langkah berikut:
+- Login into [GitHub](https://github.com).
+- Open your documentation repository.
+- Open the folder that holds the file you want to edit.
+- Once the file is found, click the file so that the page will appear as in the following picture:
+
+![github repository files](https://cdn.rawgit.com/octapush/documentations/141f4fe0/octapush.docs/00.ASSETS/images/github-octadocs-create-file-andor-folder.png)
+
+- Click the pencil icon as it appears on the red picture box above. Then the page will appear as in the following picture:
+
+![github repository files](https://cdn.rawgit.com/octapush/documentations/141f4fe0/octapush.docs/00.ASSETS/images/github-octadocs-create-file-andor-folder.png)
+
+- You can rename the document file via textbox as it appears on the first red box.
+- The second red box is used as your document content editor box.
+- When you finish editing your document, click the `Commit changes` button as in the third red box.
