--- a/octapush.docs/01.Introduction.md
+++ b/octapush.docs/01.Introduction.md
@@ -11,7 +11,7 @@ Referring to the above quotation, **`octapush.docs`** tries to combine the capab
 
 **`octapush.docs`** is a web-based application designed to automate and make it easier for you to create/produce documentation for each of your products. So you do not have to bother to make a documentation application that is structured, but easy in the presentation and easy on updating your documentation.
 
-With `octapush.docs`, you simply change (create, update, or delete) your documentation files, and save those files in [GitHub](https://github.com). So, your documentation is ready to use.
+With **`octapush.docs`**, you simply change (create, update, or delete) your documentation files, and save those files in [GitHub](https://github.com). So, your documentation is ready to use.
 
 As a simple explanation, **`octapush.docs`** is a file explorer (and viewer) for your documentation files stored in [GitHub](https://github.com). And display it according to the format of each file.
 
