--- a/octapush.docs/05.Documenting/03.Edit Document.md
+++ b/octapush.docs/05.Documenting/03.Edit Document.md
@@ -1,17 +1,17 @@
 # Update Document
 
-Untuk mengedit file dokumentasi, Anda dapat mengikuti beberapa langkah berikut:
+To edit the documentation file, you can follow these steps:
 - Login into [GitHub](https://github.com).
 - Open your documentation repository.
 - Open the folder that holds the file you want to edit.
 - Once the file is found, click the file so that the page will appear as in the following picture:
 
-![github repository files](https://cdn.rawgit.com/octapush/documentations/141f4fe0/octapush.docs/00.ASSETS/images/github-octadocs-create-file-andor-folder.png)
+![github repository files](https://cdn.rawgit.com/octapush/documentations/88c792a3/octapush.docs/00.ASSETS/images/github-octadocs-edit-file-1.png)
 
 - Click the pencil icon as it appears on the red picture box above. Then the page will appear as in the following picture:
 
-![github repository files](https://cdn.rawgit.com/octapush/documentations/141f4fe0/octapush.docs/00.ASSETS/images/github-octadocs-create-file-andor-folder.png)
+![github repository files](https://cdn.rawgit.com/octapush/documentations/88c792a3/octapush.docs/00.ASSETS/images/github-octadocs-edit-file-2.png)
 
-- You can rename the document file via textbox as it appears on the first red box.
+- You can rename (if necessary) the document file via textbox as it appears on the first red box.
 - The second red box is used as your document content editor box.
 - When you finish editing your document, click the `Commit changes` button as in the third red box.
