--- a/octapush.docs/05.Documenting/04.Delete Document.md
+++ b/octapush.docs/05.Documenting/04.Delete Document.md
@@ -1,3 +1,16 @@
 # Delete Document
 
-Ini adalah content delete document
+To delete the documentation file, you can follow these steps:
+- Login into [GitHub](https://github.com).
+- Open your documentation repository.
+- Open the folder that holds the file you want to delete.
+- Once the file is found, click the file so that the page will appear as in the following picture:
+
+![github repository files](https://cdn.rawgit.com/octapush/documentations/ca7ee9db/octapush.docs/00.ASSETS/images/github-octadocs-delete-file-1.png)
+
+- Click the trash icon as it appears on the red picture box above. Then the page will appear as in the following picture:
+
+![github repository files](https://cdn.rawgit.com/octapush/documentations/88c792a3/octapush.docs/00.ASSETS/images/github-octadocs-edit-file-2.png)
+
+- You can add some description on the textbox as in the first red box.
+- Click the `Commit changes` button as in the second red box to delete your file, or press `Cancel` button to abort the deletion.
