--- a/octapush.docs/01.Introduction.md
+++ b/octapush.docs/01.Introduction.md
@@ -1,4 +1,4 @@
-# **`octapush.docs`**
+# **`octapush.docs:`**
 Quoted from [GitHub Guide](https://guides.github.com/features/wikis/):
 
 > Good documentation is key to the success of any project. Making documentation accessible enables people to learn about a project; making it easy to update ensures that documentation stays relevant.
